clean up csv output

--- a/tweeter_data_manip.ipynb
+++ b/tweeter_data_manip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_azure = pd.read_csv('df_azure.csv')\n",
-    "df_aws = pd.read_csv('df_aws.csv')\n",
-    "df_gcp = pd.read_csv('df_gcp.csv')"
+    "df_azure = pd.read_csv('data_output/df_azure.csv')\n",
+    "df_aws = pd.read_csv('data_output/df_aws.csv')\n",
+    "df_gcp = pd.read_csv('data_output/df_gcp.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,55 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ok': True,\n",
-       " 'channel': 'GHWQ9P8GM',\n",
-       " 'ts': '1555430250.000400',\n",
-       " 'message': {'type': 'message',\n",
-       "  'subtype': 'bot_message',\n",
-       "  'text': 'Here are todays updates on AWS, Azure, and GCP:',\n",
-       "  'ts': '1555430250.000400',\n",
-       "  'username': 'Twitter Update',\n",
-       "  'icons': {'image_48': 'https://s3-us-west-2.amazonaws.com/slack-files2/bot_icons/2019-04-15/608351148116_48.png'},\n",
-       "  'bot_id': 'BHW8EU6G4'},\n",
-       " 'headers': {'Content-Type': 'application/json; charset=utf-8',\n",
-       "  'Content-Length': '275',\n",
-       "  'Connection': 'keep-alive',\n",
-       "  'Date': 'Tue, 16 Apr 2019 15:57:30 GMT',\n",
-       "  'Server': 'Apache',\n",
-       "  'X-Content-Type-Options': 'nosniff',\n",
-       "  'X-Slack-Req-Id': 'e3e7965b-cd7e-4104-b7ef-7be06e095d28',\n",
-       "  'X-OAuth-Scopes': 'identify,read,post,client,apps',\n",
-       "  'Expires': 'Mon, 26 Jul 1997 05:00:00 GMT',\n",
-       "  'Cache-Control': 'private, no-cache, no-store, must-revalidate',\n",
-       "  'Access-Control-Expose-Headers': 'x-slack-req-id',\n",
-       "  'X-XSS-Protection': '0',\n",
-       "  'X-Accepted-OAuth-Scopes': 'chat:write:bot,post',\n",
-       "  'Vary': 'Accept-Encoding',\n",
-       "  'Pragma': 'no-cache',\n",
-       "  'Access-Control-Allow-Headers': 'slack-route, x-slack-version-ts',\n",
-       "  'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload',\n",
-       "  'Referrer-Policy': 'no-referrer',\n",
-       "  'Content-Encoding': 'gzip',\n",
-       "  'Access-Control-Allow-Origin': '*',\n",
-       "  'X-Via': 'haproxy-www-2t5y',\n",
-       "  'X-Cache': 'Miss from cloudfront',\n",
-       "  'Via': '1.1 325d03085430e8fa793924353b3b665b.cloudfront.net (CloudFront)',\n",
-       "  'X-Amz-Cf-Id': '_mI-j79C4SCggqjjgNdrZk0JwB8monr927M8UdVadHJZZpzf_pqPGw=='}}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.api_call(\n",
     "  \"chat.postMessage\",\n",
@@ -214,55 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ok': True,\n",
-       " 'channel': 'GHWQ9P8GM',\n",
-       " 'ts': '1555430251.000500',\n",
-       " 'message': {'type': 'message',\n",
-       "  'subtype': 'bot_message',\n",
-       "  'text': '<https://twitter.com/DevHighlights/status/1117140437238734849>',\n",
-       "  'ts': '1555430251.000500',\n",
-       "  'username': 'Twitter Update',\n",
-       "  'icons': {'image_48': 'https://s3-us-west-2.amazonaws.com/slack-files2/bot_icons/2019-04-15/608351148116_48.png'},\n",
-       "  'bot_id': 'BHW8EU6G4'},\n",
-       " 'headers': {'Content-Type': 'application/json; charset=utf-8',\n",
-       "  'Content-Length': '283',\n",
-       "  'Connection': 'keep-alive',\n",
-       "  'Date': 'Tue, 16 Apr 2019 15:57:31 GMT',\n",
-       "  'Server': 'Apache',\n",
-       "  'X-Content-Type-Options': 'nosniff',\n",
-       "  'X-Slack-Req-Id': 'b2d88def-6f58-4be0-b535-7359119514db',\n",
-       "  'X-OAuth-Scopes': 'identify,read,post,client,apps',\n",
-       "  'Expires': 'Mon, 26 Jul 1997 05:00:00 GMT',\n",
-       "  'Cache-Control': 'private, no-cache, no-store, must-revalidate',\n",
-       "  'Access-Control-Expose-Headers': 'x-slack-req-id',\n",
-       "  'X-XSS-Protection': '0',\n",
-       "  'X-Accepted-OAuth-Scopes': 'chat:write:bot,post',\n",
-       "  'Vary': 'Accept-Encoding',\n",
-       "  'Pragma': 'no-cache',\n",
-       "  'Access-Control-Allow-Headers': 'slack-route, x-slack-version-ts',\n",
-       "  'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload',\n",
-       "  'Referrer-Policy': 'no-referrer',\n",
-       "  'Content-Encoding': 'gzip',\n",
-       "  'Access-Control-Allow-Origin': '*',\n",
-       "  'X-Via': 'haproxy-www-iyp4',\n",
-       "  'X-Cache': 'Miss from cloudfront',\n",
-       "  'Via': '1.1 8ad5a9cbb864898c238f716c1a12623d.cloudfront.net (CloudFront)',\n",
-       "  'X-Amz-Cf-Id': 'lrNdwipolt8L-Qfa1NRSdiIYbNj9Ra9e99Qc_urKUlaF_zNhW4LIXg=='}}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.api_call(\n",
     "  \"chat.postMessage\",\n",
@@ -276,55 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ok': True,\n",
-       " 'channel': 'GHWQ9P8GM',\n",
-       " 'ts': '1555430252.000700',\n",
-       " 'message': {'type': 'message',\n",
-       "  'subtype': 'bot_message',\n",
-       "  'text': '<https://twitter.com/seovalencia/status/1117321841088106496>',\n",
-       "  'ts': '1555430252.000700',\n",
-       "  'username': 'Twitter Update',\n",
-       "  'icons': {'image_48': 'https://s3-us-west-2.amazonaws.com/slack-files2/bot_icons/2019-04-15/608351148116_48.png'},\n",
-       "  'bot_id': 'BHW8EU6G4'},\n",
-       " 'headers': {'Content-Type': 'application/json; charset=utf-8',\n",
-       "  'Content-Length': '280',\n",
-       "  'Connection': 'keep-alive',\n",
-       "  'Date': 'Tue, 16 Apr 2019 15:57:32 GMT',\n",
-       "  'Server': 'Apache',\n",
-       "  'X-Content-Type-Options': 'nosniff',\n",
-       "  'X-Slack-Req-Id': '595510c1-63a6-42b5-84c7-f8de7700e014',\n",
-       "  'X-OAuth-Scopes': 'identify,read,post,client,apps',\n",
-       "  'Expires': 'Mon, 26 Jul 1997 05:00:00 GMT',\n",
-       "  'Cache-Control': 'private, no-cache, no-store, must-revalidate',\n",
-       "  'Access-Control-Expose-Headers': 'x-slack-req-id',\n",
-       "  'X-XSS-Protection': '0',\n",
-       "  'X-Accepted-OAuth-Scopes': 'chat:write:bot,post',\n",
-       "  'Vary': 'Accept-Encoding',\n",
-       "  'Pragma': 'no-cache',\n",
-       "  'Access-Control-Allow-Headers': 'slack-route, x-slack-version-ts',\n",
-       "  'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload',\n",
-       "  'Referrer-Policy': 'no-referrer',\n",
-       "  'Content-Encoding': 'gzip',\n",
-       "  'Access-Control-Allow-Origin': '*',\n",
-       "  'X-Via': 'haproxy-www-teh6',\n",
-       "  'X-Cache': 'Miss from cloudfront',\n",
-       "  'Via': '1.1 9742923607374c982a5b7e9258144eab.cloudfront.net (CloudFront)',\n",
-       "  'X-Amz-Cf-Id': '6a9UzxSr-ib87RfBzwLGyJqHNP9nrHtTz87syMdgv8hFnAZ2Oap8Aw=='}}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.api_call(\n",
     "  \"chat.postMessage\",\n",
@@ -337,55 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ok': True,\n",
-       " 'channel': 'GHWQ9P8GM',\n",
-       " 'ts': '1555430535.001700',\n",
-       " 'message': {'type': 'message',\n",
-       "  'subtype': 'bot_message',\n",
-       "  'text': '<https://twitter.com/h2oai/status/1117814774375440387>',\n",
-       "  'ts': '1555430535.001700',\n",
-       "  'username': 'Twitter Update',\n",
-       "  'icons': {'image_48': 'https://s3-us-west-2.amazonaws.com/slack-files2/bot_icons/2019-04-15/608351148116_48.png'},\n",
-       "  'bot_id': 'BHW8EU6G4'},\n",
-       " 'headers': {'Content-Type': 'application/json; charset=utf-8',\n",
-       "  'Content-Length': '276',\n",
-       "  'Connection': 'keep-alive',\n",
-       "  'Date': 'Tue, 16 Apr 2019 16:02:15 GMT',\n",
-       "  'Server': 'Apache',\n",
-       "  'X-Content-Type-Options': 'nosniff',\n",
-       "  'X-Slack-Req-Id': 'f2799a77-64b1-4339-9468-e4b61d8596a9',\n",
-       "  'X-OAuth-Scopes': 'identify,read,post,client,apps',\n",
-       "  'Expires': 'Mon, 26 Jul 1997 05:00:00 GMT',\n",
-       "  'Cache-Control': 'private, no-cache, no-store, must-revalidate',\n",
-       "  'Access-Control-Expose-Headers': 'x-slack-req-id',\n",
-       "  'X-XSS-Protection': '0',\n",
-       "  'X-Accepted-OAuth-Scopes': 'chat:write:bot,post',\n",
-       "  'Vary': 'Accept-Encoding',\n",
-       "  'Pragma': 'no-cache',\n",
-       "  'Access-Control-Allow-Headers': 'slack-route, x-slack-version-ts',\n",
-       "  'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload',\n",
-       "  'Referrer-Policy': 'no-referrer',\n",
-       "  'Content-Encoding': 'gzip',\n",
-       "  'Access-Control-Allow-Origin': '*',\n",
-       "  'X-Via': 'haproxy-www-snfr',\n",
-       "  'X-Cache': 'Miss from cloudfront',\n",
-       "  'Via': '1.1 a20436c6d109fe9002d093f519ad4399.cloudfront.net (CloudFront)',\n",
-       "  'X-Amz-Cf-Id': 'JrECTtLpzmqQ6gXw1SNAhX3faJ5mrgcUC6qiktOqiiwxF_24etDJXg=='}}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.api_call(\n",
     "  \"chat.postMessage\",\n",
