update channel properties '

--- a/tweeter_data_manip.ipynb
+++ b/tweeter_data_manip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,16 @@
    "source": [
     "https://github.com/slackapi/python-slackclient\n",
     "<br>https://api.slack.com/custom-integrations/legacy-tokens\n",
-    "<br> Jonathan Reshef Id - UA4RMPMU7\n",
-    "<br> ml_twitter_updates channel Id - GHWQ9P8GM\n",
+    "<br> Jonathan Reshef - id: UA4RMPMU7\n",
+    "<br> ml_twitter_updates -channel id: GHWQ9P8GM\n",
+    "<br> ny-twitter-bot - channel id: CHZ3VUTAQ\n",
+    "<br>\n",
+    "<br>API Calls:\n",
+    "<br> See list of channels\n",
+    "<br>sc.api_call(\n",
+    "  \"channels.list\",\n",
+    "  exclude_archived=True\n",
+    ")\n",
     "<br> Delete messages: \n",
     "<br>sc.api_call(\n",
     "  \"chat.delete\",\n",
@@ -219,6 +227,27 @@
     "  text=topGCPTwitterURL\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
